@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* pquery now if given no restrictions, defaults to --all.
+
 * pquery argument parsing was rewritten; ordering issues for --config
   were fixed, error messages improved, and general cleanup.
 
